--- a/package.json
+++ b/package.json
@@ -6,13 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sass": "sass --watch public/scss/style.scss:public/css/style.css"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
+    "@next-auth/mongodb-adapter": "^1.0.3",
+    "@paypal/react-paypal-js": "^7.8.1",
+    "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.9.1",
+    "cookies-next": "^2.0.5",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.1",
+    "next": "12.1.6",
+    "next-absolute-url": "^1.2.2",
+    "next-auth": "^4.10.0",
+    "nodemailer": "^6.7.7",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.5",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.53.0",
+    "swiper": "^8.3.1",
+    "swr": "^1.3.0",
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
   }
 }
