--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "swr": "^1.3.0",
     "validator": "^13.7.0",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   }
 }
