--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-toastify": "^9.0.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "rerousel": "^0.1.9",
     "sass": "^1.53.0",
     "swiper": "^8.3.1",
     "swr": "^1.3.0",
