--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.53.0",
-    "swiper": "^8.3.1",
+    "rerousel": "^0.1.9",
+    "swiper": "^8.4.7",
     "swr": "^1.3.0",
     "validator": "^13.7.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   }
 }
