--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@paypal/react-paypal-js": "^7.8.1",
     "@reduxjs/toolkit": "^1.8.2",
+    "autoprefixer": "^10.4.15",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
@@ -30,20 +31,20 @@
     "next-auth": "^4.10.0",
     "nodemailer": "^6.7.7",
     "nookies": "^2.5.2",
+    "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.0.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "sass": "^1.53.0",
     "rerousel": "^0.1.9",
+    "sass": "^1.53.0",
+    "sharp": "^0.32.5",
     "swiper": "^8.4.7",
     "swr": "^1.3.0",
+    "tailwindcss": "^3.3.3",
     "validator": "^13.7.0",
-    "yup": "^0.32.11",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3"
+    "yup": "^0.32.11"
   }
 }
